Fix Pro pill alignment

--- a/app/assets/stylesheets/responsive/custom.scss
+++ b/app/assets/stylesheets/responsive/custom.scss
@@ -297,7 +297,6 @@ a.link_button_green_large {
 .js-loaded {
   .account-link {
     color: $color_white;
-    padding-right: 2em;
     @include respond-min( $main_menu-mobile_menu_cutoff ){
       //make it appear like it's aligned with the grid, even though it isn't
       margin-right: 0.935em;
